# tank_with_STM32

./: CMakeLists.txt  Makefile
APP/inc/: main.h  stm32f4xx.h  stm32f4xx_hal_conf.h
APP/src/: main.c  stm32f4xx_it.c
BSP/inc/: bsp.h
BSP/src/: USART_COM.c  bsp.c
CMSIS/src/: system_stm32f4xx.c
OS/: CMakeLists.txt  tos_config.h
STM32F4xx_HAL_Driver/: CMakeLists.txt
STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_usart.c
